<resources>
    <string name="app_name">ome Doanate</string>
    <string name="some_donate">Some Donate</string>
    <string name="porbazdid">پربازدیدها</string>
    <string name="image">image</string>
    <string name="person_info">عضویت</string>
    <string name="email">ورود</string>
    <string name="subheader">subheader</string>
    <string name="showall">نمایش همه</string>
    <string name="title">Title</string>
    <string name="wellcome">به نرم افزار خود خوش آمدید</string>
    <string name="hint_fullname">نام و نام خانوادگی</string>
    <string name="int_nationacode">کد ملی</string>
    <string name="hint_phonenumber">شماره تلفن</string>
    <string name="hint_password">رمز عبور</string>
    <string name="hint_repassword">تکرار رمز عبور</string>
    <string name="hint_pishsabtenam">پیش ثبت نام</string>
    <string name="hint_continue">مرحله بعد و تکمیل ثبت نام</string>
    <string name="hint_accnum">شماره کارت</string>
    <string name="hint_sheba">دریافت شبا</string>
    <string name="finalsubmit">ثبت نهایی و نمایش QR Code</string>
    <string name="getcode">دریافت کد</string>
    <string name="backtomainactivity">بازگشت به صفحه اصلی</string>
    <string name="goal">هدف : 150,000 تومان</string>
    <string name="donated">مقدار دونیت شده : 100,000 تومان</string>
    <string name="donate_content">برای خیریه به مردم سیل زده ی کرمانشاه و خرید کانکس</string>
    <string name="donate">حمایت مالی</string>
    <string name="simplecost">+100,000 تومان</string>
    <string name="twodays_ago">2 روز پیش</string>
    <string name="nobody">ناشناس</string>
    <string name="texr">با آرزوی موفقیت برای شما</string>
    <string name="profile">پروفایل</string>
    <string name="name">ali rajabnezhad</string>
    <string name="myemail">alirajabi8@gmail.com</string>
    <string name="mybio">استاد دانشگاه</string>
    <string name="mobile">09383974483</string>
    <string name="tolidmohtava">تولید محتوای درسی</string>
    <string name="goalll">200,000 تومان</string>
    <string name="testssss">124,000 تومان</string>
    <string name="toman">2,000 تومان</string>
    <string name="namesss">علی محمدی</string>
    <string name="ssss">با آرزوی موفقیت برای شما</string>
    <string name="showcode">نمایش کد</string>
    <string name="information">راهنما</string>
    <string name="enter_donate">مقدار حمایت مالی خود را وارد کنید</string>
    <string name="iaal">ريال</string>
    <string name="dargah_connection">اتصال به درگاه پرداخت</string>
</resources>
