<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item android:title="@string/person_info"
            android:id="@+id/person_info_id"
            android:icon="@drawable/ic_sign_in"/>

        <item
            android:title="@string/email"
            android:id="@+id/login_id"
            android:icon="@drawable/ic_login"/>

        <item
            android:id="@+id/profile_id"
            android:icon="@drawable/ic_profile_24dp"
            android:title="@string/profile"/>

        <item
            android:id="@+id/information_id"
            android:title="@string/information"
            android:icon="@drawable/ic_info_outline_black_24dp"
            />

        <item
            android:id="@+id/show_qrcode_id"
            android:title="@string/showcode"
            android:icon="@drawable/ic_code_black_24dp"
            />
    </group>
</menu>