<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    app:cardElevation="@dimen/cardelevation_3dp"
    app:cardCornerRadius="3dp"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_margin="@dimen/margin_3dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/card_items_id"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:orientation="horizontal"
        android:weightSum="1"
        android:padding="@dimen/padding_5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_weight="0.4"
            android:layout_width="0dp"
            android:weightSum="1"
            android:orientation="vertical"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/txt_donated_id"
                android:layout_weight="0.6"
                android:layout_width="match_parent"
                android:textColor="@color/color_green"
                android:textSize="@dimen/textsize_18sp"
                android:text="@string/simplecost"
                android:textStyle="bold"
                android:textAlignment="center"
                android:layout_height="0dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_weight="0.4"
                android:textAlignment="center"
                android:textStyle="italic"
                android:id="@+id/txt_date_id"
                android:text="@string/twodays_ago"
                android:layout_height="0dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_weight="0.6"
            android:layout_width="0dp"
            android:weightSum="1"
            android:orientation="vertical"
            android:layout_height="match_parent">

            <TextView
                android:layout_weight="0.4"
                android:id="@+id/txt_name_id"
                android:layout_width="match_parent"
                android:textColor="@color/color_black"
                android:text="@string/nobody"
                android:textStyle="bold"
                android:textAlignment="center"
                android:layout_height="0dp"/>

            <TextView
                android:id="@+id/txt_message_id"
                android:layout_width="match_parent"
                android:layout_weight="0.6"
                android:padding="@dimen/padding_5dp"
                android:textAlignment="center"
                android:text="@string/texr"
                android:layout_height="0dp"/>

        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>