<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    app:cardElevation="@dimen/cardelevation_3dp"
    app:cardCornerRadius="3dp"
    android:layout_margin="@dimen/margin_3dp"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="horizontal"
            android:weightSum="1"
            android:padding="@dimen/padding_10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/txt_cost_id"
                android:text="@string/toman"
                android:textSize="@dimen/textsize_20sp"
                android:textAlignment="center"
                android:textStyle="bold"
                android:textColor="@color/color_green"
                android:layout_weight="0.4"
                android:layout_width="0dp"
                android:layout_height="wrap_content"/>

            <TextView
                android:text="@string/namesss"
                android:textColor="@color/color_black"
                android:textStyle="bold"
                android:id="@+id/txt_name"
                android:textSize="@dimen/textsize_18sp"
                android:textAlignment="center"
                android:layout_weight="0.6"
                android:layout_width="0dp"
                android:layout_height="wrap_content"/>

        </LinearLayout>

        <TextView
            android:id="@+id/txt_mess"
            android:text="@string/ssss"
            android:textSize="@dimen/textsize_18sp"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textColor="@color/colorPrimary"
            android:padding="@dimen/padding_5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>
</androidx.cardview.widget.CardView>