<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.Signup_continue">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:background="@color/colorPrimary"
        android:id="@+id/toolbarcontinue_id"
        android:layout_height="?attr/actionBarSize"/>

    <TextView
        android:fontFamily="@font/greate_font"
        android:text="@string/some_donate"
        android:layout_width="match_parent"
        android:id="@+id/t1"
        android:layout_below="@id/toolbarcontinue_id"
        android:textAlignment="center"
        android:textSize="60sp"
        android:textColor="@color/color_black"
        android:layout_marginTop="@dimen/margin_20dp"
        android:layout_marginBottom="@dimen/margin_30dp"
        android:layout_height="wrap_content"
        />

    <EditText
        android:layout_below="@id/t1"
        android:id="@+id/txt_accnum_id"
        android:layout_margin="@dimen/margin_15dp"
        android:padding="@dimen/padding_10dp"
        android:hint="@string/hint_accnum"
        android:textAlignment="center"
        android:textColor="@color/colorAccent"
        android:inputType="number"
        android:maxLength="16"
        android:textStyle="bold"
        android:background="@drawable/back_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />

    <Button
        android:layout_below="@id/txt_accnum_id"
        android:id="@+id/btn_getsheba_id"
        android:text="@string/hint_sheba"
        android:background="@color/color_green"
        android:layout_marginTop="@dimen/margin_15dp"
        android:layout_marginRight="@dimen/margin_50dp"
        android:layout_marginLeft="@dimen/margin_50dp"
        android:layout_marginBottom="@dimen/margin_15dp"
        android:layout_width="match_parent"
        android:textStyle="bold"
        android:textAlignment="center"
        android:textSize="@dimen/textsize_20sp"
        android:layout_height="wrap_content"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_getsheba_id"
        android:textAlignment="center"
        android:textColor="@color/colorPrimaryDark"
        android:padding="@dimen/padding_5dp"
        android:id="@+id/txt_showsheba_id"
        android:textSize="@dimen/textsize_18sp"
        android:layout_marginTop="@dimen/margin_50dp"
        android:layout_marginLeft="@dimen/margin_15dp"
        android:layout_marginRight="@dimen/margin_15dp"
        android:background="@color/fragment_background_color"
        />

    <Button
        android:id="@+id/btn_finalsubmit_id"
        android:text="@string/finalsubmit"
        android:background="@color/color_green"
        android:layout_marginTop="@dimen/margin_15dp"
        android:layout_marginRight="@dimen/margin_50dp"
        android:layout_marginLeft="@dimen/margin_50dp"
        android:layout_marginBottom="@dimen/margin_15dp"
        android:layout_width="match_parent"
        android:textStyle="bold"
        android:layout_alignParentBottom="true"
        android:textAlignment="center"
        android:textSize="@dimen/textsize_20sp"
        android:layout_height="wrap_content"
        />


</RelativeLayout>