<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fragment_background_color"
    android:orientation="vertical"
    tools:context=".Activities.Profile">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:id="@+id/toolbar_profile_id"
        android:background="@color/colorPrimary"
        android:layout_height="?attr/actionBarSize"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:weightSum="1"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="160dp"
            android:id="@+id/img_my_profile_id"
            android:src="@drawable/profilepic"
            android:layout_margin="@dimen/margin_10dp"
            android:background="@drawable/image_porbazdid_border"
            android:layout_height="160dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_margin="@dimen/margin_10dp"
            android:weightSum="1"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/txt_my_name_id"
                android:layout_weight="0.25"
                android:text="@string/name"
                android:textStyle="bold"
                android:padding="@dimen/padding_5dp"
                android:textAlignment="center"
                android:textSize="@dimen/textsize_26sp"
                android:layout_width="match_parent"
                android:textColor="@color/color_black"
                android:layout_height="0dp"/>

            <TextView
                android:text="@string/myemail"
                android:textColor="@color/colorAccent"
                android:padding="@dimen/padding_5dp"
                android:id="@+id/txt_meghdar_taiin_shode_id"
                android:layout_weight="0.25"
                android:textSize="@dimen/textsize_18sp"
                android:textStyle="bold"
                android:layout_width="match_parent"
                android:layout_height="0dp"/>

            <TextView
                android:text="@string/mybio"
                android:layout_weight="0.25"
                android:textAlignment="center"
                android:textSize="@dimen/textsize_18sp"
                android:textColor="@color/color_green"
                android:id="@+id/txt_donate_shode_id"
                android:padding="@dimen/padding_5dp"
                android:layout_width="match_parent"
                android:layout_height="0dp"/>

                <TextView
                    android:text="@string/mobile"
                    android:textAlignment="center"
                    android:textColor="@color/color_black"
                    android:textStyle="bold"
                    android:textSize="@dimen/textsize_18sp"
                    android:padding="@dimen/margin_5dp"
                    android:layout_weight="0.25"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"/>
            </LinearLayout>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.1dp"
        android:layout_marginLeft="@dimen/margin_20dp"
        android:background="#68000000" />

    <LinearLayout
        android:weightSum="1"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/img_now_or_id"
            android:layout_weight="0.4"
            android:layout_width="0dp"
            android:src="@drawable/qrcode"
            android:layout_margin="@dimen/margin_10dp"
            android:layout_height="160dp"/>

        <LinearLayout
            android:layout_weight="0.6"
            android:weightSum="1"
            android:orientation="vertical"
            android:layout_margin="@dimen/margin_10dp"
            android:layout_width="0dp"
            android:layout_height="match_parent">

            <TextView
                android:layout_weight="0.33333"
                android:textSize="@dimen/textsize_20sp"
                android:textAlignment="center"
                android:paddingTop="@dimen/padding_15dp"
                android:textStyle="bold"
                android:textColor="@color/color_black"
                android:text="@string/tolidmohtava"
                android:layout_width="match_parent"
                android:layout_height="0dp"/>

            <TextView
                android:textColor="@color/color_green"
                android:layout_weight="0.33333"
                android:textStyle="bold"
                android:textAlignment="center"
                android:textSize="@dimen/textsize_26sp"
                android:paddingTop="@dimen/padding_15dp"
                android:text="@string/goalll"
                android:layout_width="match_parent"
                android:layout_height="0dp"/>

            <LinearLayout
                android:layout_weight="0.33333"
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:weightSum="1"
                android:layout_height="0dp">

                <ProgressBar

                    android:id="@+id/progressBar"
                    style="?android:attr/progressBarStyleHorizontal"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:minHeight="50dp"
                    android:minWidth="250dp"
                    android:max="100"
                    android:padding="@dimen/padding_5dp"
                    android:progress="60"
                    android:layout_weight="0.3"
                    tools:ignore="NestedWeights" />

                <TextView
                    android:text="@string/testssss"
                    android:textAlignment="center"
                    android:textColor="@color/colorPrimaryDark"
                    android:textStyle="bold"
                    android:padding="@dimen/margin_5dp"
                    android:layout_weight="0.7"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"/>

            </LinearLayout>

        </LinearLayout>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="0.1dp"
        android:layout_marginLeft="@dimen/margin_20dp"
        android:background="#68000000" />

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_margin="@dimen/margin_5dp"
        android:id="@+id/recycler_profile_id"
        android:layout_height="match_parent"/>

</LinearLayout>