<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.Donate">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:background="@color/colorPrimary"
        android:id="@+id/toolbaar_donate_id"
        android:layout_height="?attr/actionBarSize"/>

    <TextView
        android:text="حمایت مالی برای"
        android:textStyle="bold"
        android:textAlignment="center"
        android:textSize="@dimen/textsize_18sp"
        android:textColor="@color/color_black"
        android:layout_margin="@dimen/margin_10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:layout_width="match_parent"
        android:id="@+id/txt_hemayat_name_id"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="@dimen/textsize_26sp"
        android:textAlignment="center"
        android:textStyle="bold"
        android:layout_margin="@dimen/margin_10dp"
        android:layout_height="wrap_content"/>

    <TextView
        android:layout_width="match_parent"
        android:text="@string/enter_donate"
        android:textStyle="bold"
        android:textAlignment="center"
        android:textSize="@dimen/textsize_20sp"
        android:textColor="@color/color_black"
        android:layout_height="wrap_content"/>

    <EditText
        android:layout_width="match_parent"
        android:id="@+id/txt_donate_field_id"
        android:layout_margin="@dimen/margin_30dp"
        android:background="@drawable/back_edittext"
        android:padding="@dimen/padding_10dp"
        android:hint="@string/iaal"
        android:textAlignment="center"
        android:inputType="number"
        android:textColor="@color/color_white"
        android:layout_height="wrap_content"/>

    <Button
        android:layout_width="match_parent"
        android:id="@+id/btn_connect_to_dargah_id"
        android:layout_margin="@dimen/margin_50dp"
        android:text="@string/dargah_connection"
        android:textColor="@color/color_black"
        android:textSize="@dimen/textsize_18sp"
        android:background="@color/color_green"
        android:layout_height="wrap_content"/>


</LinearLayout>