<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:background="@color/fragment_background_color"
    android:layout_height="match_parent"
    tools:context=".Activities.ShowItems">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:id="@+id/toolbar_items_id"
        android:background="@color/colorPrimary"
        android:layout_height="?attr/actionBarSize"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:weightSum="1"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="160dp"
            android:id="@+id/img_profile_id"
            android:src="@drawable/ic_person_black_24dp"
            android:layout_margin="@dimen/margin_10dp"
            android:background="@drawable/image_porbazdid_border"
            android:layout_height="160dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_margin="@dimen/margin_10dp"
            android:weightSum="1"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/txt_title_id"
                android:layout_weight="0.25"
                android:text="@string/title"
                android:textStyle="bold"
                android:padding="@dimen/padding_5dp"
                android:textAlignment="center"
                android:textSize="@dimen/textsize_26sp"
                android:layout_width="match_parent"
                android:textColor="@color/color_black"
                android:layout_height="0dp"/>

            <TextView
                android:text="@string/goal"
                android:textColor="@color/colorAccent"
                android:padding="@dimen/padding_5dp"
                android:id="@+id/txt_meghdar_taiin_shode_id"
                android:layout_weight="0.25"
                android:textSize="@dimen/textsize_18sp"
                android:textStyle="bold"
                android:layout_width="match_parent"
                android:layout_height="0dp"/>

            <TextView
                android:text="@string/donated"
                android:layout_weight="0.25"
                android:textColor="@color/color_green"
                android:id="@+id/txt_donate_shode_id"
                android:padding="@dimen/padding_5dp"
                android:layout_width="match_parent"
                android:layout_height="0dp"/>

            <LinearLayout
                android:layout_weight="0.25"
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:weightSum="1"
                android:layout_height="0dp">

                <ProgressBar

                    android:id="@+id/progressBar"
                    style="?android:attr/progressBarStyleHorizontal"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:minHeight="50dp"
                    android:minWidth="250dp"
                    android:max="100"
                    android:padding="@dimen/padding_5dp"
                    android:progress="60"
                    android:layout_weight="0.3"
                    tools:ignore="NestedWeights" />

                <TextView
                    android:text="60%"
                    android:textAlignment="center"
                    android:textColor="@color/colorAccent"
                    android:textStyle="bold"
                    android:padding="@dimen/margin_5dp"
                    android:layout_weight="0.7"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"/>

            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:textColor="@color/color_black"
        android:textAlignment="center"
        android:id="@+id/txt-donate_content_id"
        android:textStyle="italic"
        android:textSize="@dimen/textsize_18sp"
        android:text="@string/donate_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <Button
        android:layout_width="match_parent"
        android:text="@string/donate"
        android:textColor="@color/color_white"
        android:textStyle="bold"
        android:textSize="@dimen/textsize_18sp"
        android:background="@color/colorAccent"
        android:layout_margin="@dimen/margin_10dp"
        android:layout_height="wrap_content"/>


    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:id="@+id/reycler_items_donated_id"
        android:layout_margin="@dimen/margin_5dp"
        android:layout_height="match_parent"/>

</LinearLayout>